src/main/java/application/testData/invalidRandomAddresses/hard/completedIncorrectly/RandomAddressesWithThreeWrongRandomFields.java
package application.testData.invalidRandomAddresses.hard.completedIncorrectly;

public class RandomAddressesWithThreeWrongRandomFields {
}
